plt.hist: density=True instead of density=1

--- a/notebooks/plotting.ipynb
+++ b/notebooks/plotting.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "# the histogram of the data\n",
     "# the function returns n, bins, patches, but we don't need them\n",
-    "plt.hist(x, 50, density=1, facecolor='g', alpha=0.75)\n",
+    "plt.hist(x, 50, density=True, facecolor='g', alpha=0.75)\n",
     "\n",
     "plt.xlabel('Smarts')\n",
     "plt.ylabel('Probability')\n",
